--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -57,6 +57,9 @@ p {
     line-height: 1.7em;
 }
 
+
+/* header */
+
 #logo {
     float: left;
     margin-right: 10px;
@@ -71,4 +74,36 @@ p {
 #logo:hover {
     color: #fff;
     text-decoration: none;
+}
+
+
+/* footer */
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+}
+
+footer a {
+    color: #555;
+}
+
+footer a:hover {
+    color: #222;
+}
+
+footer small {
+    float: left;
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+}
+
+footer ul li {
+    float: left;
+    margin-left: 15px;
 }
