--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -2,6 +2,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+/* color */
+
+$light-gray: #777;
+$light-medium-light: #eaeaea;
+
 /* universal */
 
 body {
@@ -49,7 +54,7 @@ h2 {
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $light-gray;
 }
 
 p {
@@ -69,11 +74,10 @@ p {
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
-}
-
-#logo:hover {
-    color: #fff;
-    text-decoration: none;
+    &:hover {
+        color: #fff;
+        text-decoration: none;
+    }
 }
 
 
@@ -82,28 +86,23 @@ p {
 footer {
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #777;
-}
-
-footer a {
-    color: #555;
-}
-
-footer a:hover {
-    color: #222;
-}
-
-footer small {
-    float: left;
-}
-
-footer ul {
-    float: right;
-    list-style: none;
-}
-
-footer ul li {
-    float: left;
-    margin-left: 15px;
+    border-top: 1px solid $light-medium-light;
+    color: $light-gray;
+    a {
+        color: #555;
+        &:hover {
+            color: #222;
+        }
+    }
+    small {
+        float: left;
+    }
+    ul {
+        float: right;
+        list-style: none;
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
