--- a/sample_app/app/views/layouts/_header.html.erb
+++ b/sample_app/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
             <nav>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <%= link_to "Home", '#' %>
+                        <%= link_to "Home", root_path %>
                     </li>
                     <li>
-                        <%= link_to "Help", '#' %>
+                        <%= link_to "Help", help_path %>
                     </li>
                     <li>
                         <%= link_to "Log in", '#' %>
