--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -7,6 +7,27 @@
 $light-gray: #777;
 $light-medium-light: #eaeaea;
 
+/* mixins, variables, etc. */
+
+// 混入的作用是打包一系列样式规则，供多次使用
+@mixin box_sizing {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+/* miscellaneous */
+
+.debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+}
+
+
 /* universal */
 
 body {
